[package]
name = "bootcamp-medium"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
bootcamp-medium-1 = { alias = "1", problem = "https://atcoder.jp/contests/abc065/tasks/abc065_b" }
bootcamp-medium-2 = { alias = "2", problem = "https://atcoder.jp/contests/agc029/tasks/agc029_a" }
bootcamp-medium-3 = { alias = "3", problem = "https://atcoder.jp/contests/agc040/tasks/agc040_a" }
bootcamp-medium-4 = { alias = "4", problem = "https://atcoder.jp/contests/abc066/tasks/abc066_b" }
bootcamp-medium-5 = { alias = "5", problem = "https://atcoder.jp/contests/abc139/tasks/abc139_d" }
bootcamp-medium-6 = { alias = "6", problem = "https://atcoder.jp/contests/abc075/tasks/abc075_b" }
bootcamp-medium-7 = { alias = "7", problem = "https://atcoder.jp/contests/abc098/tasks/abc098_b" }
bootcamp-medium-8 = { alias = "8", problem = "https://atcoder.jp/contests/abc064/tasks/abc064_c" }
bootcamp-medium-9 = { alias = "9", problem = "https://atcoder.jp/contests/abc060/tasks/abc060_b" }
bootcamp-medium-10 = { alias = "10", problem = "https://atcoder.jp/contests/abc072/tasks/arc082_a" }
bootcamp-medium-11 = { alias = "11", problem = "https://atcoder.jp/contests/abc057/tasks/abc057_b" }
bootcamp-medium-12 = { alias = "12", problem = "https://atcoder.jp/contests/abc107/tasks/abc107_b" }
bootcamp-medium-13 = { alias = "13", problem = "https://atcoder.jp/contests/abc086/tasks/arc089_a" }
bootcamp-medium-14 = { alias = "14", problem = "https://atcoder.jp/contests/abc096/tasks/abc096_c" }
bootcamp-medium-15 = { alias = "15", problem = "https://atcoder.jp/contests/keyence2019/tasks/keyence2019_b" }
bootcamp-medium-16 = { alias = "16", problem = "https://atcoder.jp/contests/abc063/tasks/arc075_a" }
bootcamp-medium-17 = { alias = "17", problem = "https://atcoder.jp/contests/abc060/tasks/arc073_a" }
bootcamp-medium-18 = { alias = "18", problem = "https://atcoder.jp/contests/abc088/tasks/abc088_c" }
bootcamp-medium-19 = { alias = "19", problem = "https://atcoder.jp/contests/diverta2019/tasks/diverta2019_b" }
bootcamp-medium-20 = { alias = "20", problem = "https://atcoder.jp/contests/abc073/tasks/abc073_c" }
bootcamp-medium-21 = { alias = "21", problem = "https://atcoder.jp/contests/abc159/tasks/abc159_d" }
bootcamp-medium-22 = { alias = "22", problem = "https://atcoder.jp/contests/abc126/tasks/abc126_c" }
bootcamp-medium-23 = { alias = "23", problem = "https://atcoder.jp/contests/abc157/tasks/abc157_c" }
bootcamp-medium-24 = { alias = "24", problem = "https://atcoder.jp/contests/agc015/tasks/agc015_a" }
bootcamp-medium-25 = { alias = "25", problem = "https://atcoder.jp/contests/abc081/tasks/arc086_a" }
bootcamp-medium-26 = { alias = "26", problem = "https://atcoder.jp/contests/agc013/tasks/agc013_a" }
bootcamp-medium-27 = { alias = "27", problem = "https://atcoder.jp/contests/agc006/tasks/agc006_a" }
bootcamp-medium-28 = { alias = "28", problem = "https://atcoder.jp/contests/abc154/tasks/abc154_d" }
bootcamp-medium-29 = { alias = "29", problem = "https://atcoder.jp/contests/abc082/tasks/abc082_b" }
bootcamp-medium-30 = { alias = "30", problem = "https://atcoder.jp/contests/abc090/tasks/arc091_a" }
bootcamp-medium-31 = { alias = "31", problem = "https://atcoder.jp/contests/abc069/tasks/arc080_a" }
bootcamp-medium-32 = { alias = "32", problem = "https://atcoder.jp/contests/abc085/tasks/abc085_c" }
bootcamp-medium-33 = { alias = "33", problem = "https://atcoder.jp/contests/abc043/tasks/abc043_b" }
bootcamp-medium-34 = { alias = "34", problem = "https://atcoder.jp/contests/abc101/tasks/arc099_a" }
bootcamp-medium-35 = { alias = "35", problem = "https://atcoder.jp/contests/abc131/tasks/abc131_c" }
bootcamp-medium-36 = { alias = "36", problem = "https://atcoder.jp/contests/abc109/tasks/abc109_c" }
bootcamp-medium-37 = { alias = "37", problem = "https://atcoder.jp/contests/abc116/tasks/abc116_c" }
bootcamp-medium-38 = { alias = "38", problem = "https://atcoder.jp/contests/code-festival-2017-qualb/tasks/code_festival_2017_qualb_b" }
bootcamp-medium-39 = { alias = "39", problem = "https://atcoder.jp/contests/yahoo-procon2019-qual/tasks/yahoo_procon2019_qual_c" }
bootcamp-medium-40 = { alias = "40", problem = "https://atcoder.jp/contests/abc117/tasks/abc117_c" }
bootcamp-medium-41 = { alias = "41", problem = "https://atcoder.jp/contests/agc016/tasks/agc016_a" }
bootcamp-medium-42 = { alias = "42", problem = "https://atcoder.jp/contests/agc015/tasks/agc015_b" }
bootcamp-medium-43 = { alias = "43", problem = "https://atcoder.jp/contests/abc056/tasks/arc070_a" }
bootcamp-medium-44 = { alias = "44", problem = "https://atcoder.jp/contests/abc066/tasks/arc077_a" }
bootcamp-medium-45 = { alias = "45", problem = "https://atcoder.jp/contests/abc055/tasks/arc069_a" }
bootcamp-medium-46 = { alias = "46", problem = "https://atcoder.jp/contests/cf17-final/tasks/cf17_final_b" }
bootcamp-medium-47 = { alias = "47", problem = "https://atcoder.jp/contests/agc017/tasks/agc017_a" }
bootcamp-medium-48 = { alias = "48", problem = "https://atcoder.jp/contests/abc130/tasks/abc130_c" }
bootcamp-medium-49 = { alias = "49", problem = "https://atcoder.jp/contests/abc071/tasks/arc081_a" }
bootcamp-medium-50 = { alias = "50", problem = "https://atcoder.jp/contests/abc133/tasks/abc133_c" }
bootcamp-medium-51 = { alias = "51", problem = "https://atcoder.jp/contests/abc094/tasks/arc095_a" }
bootcamp-medium-52 = { alias = "52", problem = "https://atcoder.jp/contests/abc131/tasks/abc131_d" }
bootcamp-medium-53 = { alias = "53", problem = "https://atcoder.jp/contests/abc092/tasks/arc093_a" }
bootcamp-medium-54 = { alias = "54", problem = "https://atcoder.jp/contests/agc011/tasks/agc011_a" }
bootcamp-medium-55 = { alias = "55", problem = "https://atcoder.jp/contests/abc068/tasks/arc079_a" }
bootcamp-medium-56 = { alias = "56", problem = "https://atcoder.jp/contests/keyence2020/tasks/keyence2020_c" }
bootcamp-medium-57 = { alias = "57", problem = "https://atcoder.jp/contests/abc137/tasks/abc137_c" }
bootcamp-medium-58 = { alias = "58", problem = "https://atcoder.jp/contests/agc034/tasks/agc034_a" }
bootcamp-medium-59 = { alias = "59", problem = "https://atcoder.jp/contests/abc072/tasks/arc082_b" }
bootcamp-medium-60 = { alias = "60", problem = "https://atcoder.jp/contests/abc089/tasks/abc089_c" }
bootcamp-medium-61 = { alias = "61", problem = "https://atcoder.jp/contests/abc158/tasks/abc158_d" }
bootcamp-medium-62 = { alias = "62", problem = "https://atcoder.jp/contests/abc118/tasks/abc118_c" }
bootcamp-medium-63 = { alias = "63", problem = "https://atcoder.jp/contests/abc047/tasks/abc047_b" }
bootcamp-medium-64 = { alias = "64", problem = "https://atcoder.jp/contests/abc082/tasks/arc087_a" }
bootcamp-medium-65 = { alias = "65", problem = "https://atcoder.jp/contests/agc028/tasks/agc028_a" }
bootcamp-medium-66 = { alias = "66", problem = "https://atcoder.jp/contests/agc009/tasks/agc009_a" }
bootcamp-medium-67 = { alias = "67", problem = "https://atcoder.jp/contests/abc045/tasks/abc045_b" }
bootcamp-medium-68 = { alias = "68", problem = "https://atcoder.jp/contests/agc007/tasks/agc007_a" }
bootcamp-medium-69 = { alias = "69", problem = "https://atcoder.jp/contests/abc123/tasks/abc123_c" }
bootcamp-medium-70 = { alias = "70", problem = "https://atcoder.jp/contests/agc008/tasks/agc008_a" }
bootcamp-medium-71 = { alias = "71", problem = "https://atcoder.jp/contests/abc067/tasks/arc078_a" }
bootcamp-medium-72 = { alias = "72", problem = "https://atcoder.jp/contests/abc070/tasks/abc070_c" }
bootcamp-medium-73 = { alias = "73", problem = "https://atcoder.jp/contests/panasonic2020/tasks/panasonic2020_c" }
bootcamp-medium-74 = { alias = "74", problem = "https://atcoder.jp/contests/abc058/tasks/arc071_a" }
bootcamp-medium-75 = { alias = "75", problem = "https://atcoder.jp/contests/abc149/tasks/abc149_d" }
bootcamp-medium-76 = { alias = "76", problem = "https://atcoder.jp/contests/abc098/tasks/arc098_a" }
bootcamp-medium-77 = { alias = "77", problem = "https://atcoder.jp/contests/abc078/tasks/arc085_a" }
bootcamp-medium-78 = { alias = "78", problem = "https://atcoder.jp/contests/agc039/tasks/agc039_a" }
bootcamp-medium-79 = { alias = "79", problem = "https://atcoder.jp/contests/abc065/tasks/arc076_a" }
bootcamp-medium-80 = { alias = "80", problem = "https://atcoder.jp/contests/agc031/tasks/agc031_a" }
bootcamp-medium-81 = { alias = "81", problem = "https://atcoder.jp/contests/abc047/tasks/arc063_a" }
bootcamp-medium-82 = { alias = "82", problem = "https://atcoder.jp/contests/arc059/tasks/arc059_a" }
bootcamp-medium-83 = { alias = "83", problem = "https://atcoder.jp/contests/agc032/tasks/agc032_a" }
bootcamp-medium-84 = { alias = "84", problem = "https://atcoder.jp/contests/abc143/tasks/abc143_d" }
bootcamp-medium-85 = { alias = "85", problem = "https://atcoder.jp/contests/agc022/tasks/agc022_a" }
bootcamp-medium-86 = { alias = "86", problem = "https://atcoder.jp/contests/agc035/tasks/agc035_a" }
bootcamp-medium-87 = { alias = "87", problem = "https://atcoder.jp/contests/keyence2019/tasks/keyence2019_c" }
bootcamp-medium-88 = { alias = "88", problem = "https://atcoder.jp/contests/abc053/tasks/arc068_a" }
bootcamp-medium-89 = { alias = "89", problem = "https://atcoder.jp/contests/agc002/tasks/agc002_b" }
bootcamp-medium-90 = { alias = "90", problem = "https://atcoder.jp/contests/abc122/tasks/abc122_c" }
bootcamp-medium-91 = { alias = "91", problem = "https://atcoder.jp/contests/abc051/tasks/abc051_b" }
bootcamp-medium-92 = { alias = "92", problem = "https://atcoder.jp/contests/abc144/tasks/abc144_d" }
bootcamp-medium-93 = { alias = "93", problem = "https://atcoder.jp/contests/abc128/tasks/abc128_c" }
bootcamp-medium-94 = { alias = "94", problem = "https://atcoder.jp/contests/abc146/tasks/abc146_c" }
bootcamp-medium-95 = { alias = "95", problem = "https://atcoder.jp/contests/abc061/tasks/abc061_c" }
bootcamp-medium-96 = { alias = "96", problem = "https://atcoder.jp/contests/abc129/tasks/abc129_c" }
bootcamp-medium-97 = { alias = "97", problem = "https://atcoder.jp/contests/cf16-final/tasks/codefestival_2016_final_b" }
bootcamp-medium-98 = { alias = "98", problem = "https://atcoder.jp/contests/caddi2018b/tasks/caddi2018_a" }
bootcamp-medium-99 = { alias = "99", problem = "https://atcoder.jp/contests/code-festival-2017-quala/tasks/code_festival_2017_quala_b" }
bootcamp-medium-100 = { alias = "100", problem = "https://atcoder.jp/contests/abc111/tasks/arc103_a" }


[[bin]]
name = "bootcamp-medium-1"
path = "src/bin/1.rs"

[[bin]]
name = "bootcamp-medium-2"
path = "src/bin/2.rs"

[[bin]]
name = "bootcamp-medium-3"
path = "src/bin/3.rs"

[[bin]]
name = "bootcamp-medium-4"
path = "src/bin/4.rs"

[[bin]]
name = "bootcamp-medium-5"
path = "src/bin/5.rs"

[[bin]]
name = "bootcamp-medium-6"
path = "src/bin/6.rs"

[[bin]]
name = "bootcamp-medium-7"
path = "src/bin/7.rs"

[[bin]]
name = "bootcamp-medium-8"
path = "src/bin/8.rs"

[[bin]]
name = "bootcamp-medium-9"
path = "src/bin/9.rs"

[[bin]]
name = "bootcamp-medium-10"
path = "src/bin/10.rs"

[[bin]]
name = "bootcamp-medium-11"
path = "src/bin/11.rs"

[[bin]]
name = "bootcamp-medium-12"
path = "src/bin/12.rs"

[[bin]]
name = "bootcamp-medium-13"
path = "src/bin/13.rs"

[[bin]]
name = "bootcamp-medium-14"
path = "src/bin/14.rs"

[[bin]]
name = "bootcamp-medium-15"
path = "src/bin/15.rs"

[[bin]]
name = "bootcamp-medium-16"
path = "src/bin/16.rs"

[[bin]]
name = "bootcamp-medium-17"
path = "src/bin/17.rs"

[[bin]]
name = "bootcamp-medium-18"
path = "src/bin/18.rs"

[[bin]]
name = "bootcamp-medium-19"
path = "src/bin/19.rs"

[[bin]]
name = "bootcamp-medium-20"
path = "src/bin/20.rs"

[[bin]]
name = "bootcamp-medium-21"
path = "src/bin/21.rs"

[[bin]]
name = "bootcamp-medium-22"
path = "src/bin/22.rs"

[[bin]]
name = "bootcamp-medium-23"
path = "src/bin/23.rs"

[[bin]]
name = "bootcamp-medium-24"
path = "src/bin/24.rs"

[[bin]]
name = "bootcamp-medium-25"
path = "src/bin/25.rs"

[[bin]]
name = "bootcamp-medium-26"
path = "src/bin/26.rs"

[[bin]]
name = "bootcamp-medium-27"
path = "src/bin/27.rs"

[[bin]]
name = "bootcamp-medium-28"
path = "src/bin/28.rs"

[[bin]]
name = "bootcamp-medium-29"
path = "src/bin/29.rs"

[[bin]]
name = "bootcamp-medium-30"
path = "src/bin/30.rs"

[[bin]]
name = "bootcamp-medium-31"
path = "src/bin/31.rs"

[[bin]]
name = "bootcamp-medium-32"
path = "src/bin/32.rs"

[[bin]]
name = "bootcamp-medium-33"
path = "src/bin/33.rs"

[[bin]]
name = "bootcamp-medium-34"
path = "src/bin/34.rs"

[[bin]]
name = "bootcamp-medium-35"
path = "src/bin/35.rs"

[[bin]]
name = "bootcamp-medium-36"
path = "src/bin/36.rs"

[[bin]]
name = "bootcamp-medium-37"
path = "src/bin/37.rs"

[[bin]]
name = "bootcamp-medium-38"
path = "src/bin/38.rs"

[[bin]]
name = "bootcamp-medium-39"
path = "src/bin/39.rs"

[[bin]]
name = "bootcamp-medium-40"
path = "src/bin/40.rs"

[[bin]]
name = "bootcamp-medium-41"
path = "src/bin/41.rs"

[[bin]]
name = "bootcamp-medium-42"
path = "src/bin/42.rs"

[[bin]]
name = "bootcamp-medium-43"
path = "src/bin/43.rs"

[[bin]]
name = "bootcamp-medium-44"
path = "src/bin/44.rs"

[[bin]]
name = "bootcamp-medium-45"
path = "src/bin/45.rs"

[[bin]]
name = "bootcamp-medium-46"
path = "src/bin/46.rs"

[[bin]]
name = "bootcamp-medium-47"
path = "src/bin/47.rs"

[[bin]]
name = "bootcamp-medium-48"
path = "src/bin/48.rs"

[[bin]]
name = "bootcamp-medium-49"
path = "src/bin/49.rs"

[[bin]]
name = "bootcamp-medium-50"
path = "src/bin/50.rs"

[[bin]]
name = "bootcamp-medium-51"
path = "src/bin/51.rs"

[[bin]]
name = "bootcamp-medium-52"
path = "src/bin/52.rs"

[[bin]]
name = "bootcamp-medium-53"
path = "src/bin/53.rs"

[[bin]]
name = "bootcamp-medium-54"
path = "src/bin/54.rs"

[[bin]]
name = "bootcamp-medium-55"
path = "src/bin/55.rs"

[[bin]]
name = "bootcamp-medium-56"
path = "src/bin/56.rs"

[[bin]]
name = "bootcamp-medium-57"
path = "src/bin/57.rs"

[[bin]]
name = "bootcamp-medium-58"
path = "src/bin/58.rs"

[[bin]]
name = "bootcamp-medium-59"
path = "src/bin/59.rs"

[[bin]]
name = "bootcamp-medium-60"
path = "src/bin/60.rs"

[[bin]]
name = "bootcamp-medium-61"
path = "src/bin/61.rs"

[[bin]]
name = "bootcamp-medium-62"
path = "src/bin/62.rs"

[[bin]]
name = "bootcamp-medium-63"
path = "src/bin/63.rs"

[[bin]]
name = "bootcamp-medium-64"
path = "src/bin/64.rs"

[[bin]]
name = "bootcamp-medium-65"
path = "src/bin/65.rs"

[[bin]]
name = "bootcamp-medium-66"
path = "src/bin/66.rs"

[[bin]]
name = "bootcamp-medium-67"
path = "src/bin/67.rs"

[[bin]]
name = "bootcamp-medium-68"
path = "src/bin/68.rs"

[[bin]]
name = "bootcamp-medium-69"
path = "src/bin/69.rs"

[[bin]]
name = "bootcamp-medium-70"
path = "src/bin/70.rs"

[[bin]]
name = "bootcamp-medium-71"
path = "src/bin/71.rs"

[[bin]]
name = "bootcamp-medium-72"
path = "src/bin/72.rs"

[[bin]]
name = "bootcamp-medium-73"
path = "src/bin/73.rs"

[[bin]]
name = "bootcamp-medium-74"
path = "src/bin/74.rs"

[[bin]]
name = "bootcamp-medium-75"
path = "src/bin/75.rs"

[[bin]]
name = "bootcamp-medium-76"
path = "src/bin/76.rs"

[[bin]]
name = "bootcamp-medium-77"
path = "src/bin/77.rs"

[[bin]]
name = "bootcamp-medium-78"
path = "src/bin/78.rs"

[[bin]]
name = "bootcamp-medium-79"
path = "src/bin/79.rs"

[[bin]]
name = "bootcamp-medium-80"
path = "src/bin/80.rs"

[[bin]]
name = "bootcamp-medium-81"
path = "src/bin/81.rs"

[[bin]]
name = "bootcamp-medium-82"
path = "src/bin/82.rs"

[[bin]]
name = "bootcamp-medium-83"
path = "src/bin/83.rs"

[[bin]]
name = "bootcamp-medium-84"
path = "src/bin/84.rs"

[[bin]]
name = "bootcamp-medium-85"
path = "src/bin/85.rs"

[[bin]]
name = "bootcamp-medium-86"
path = "src/bin/86.rs"

[[bin]]
name = "bootcamp-medium-87"
path = "src/bin/87.rs"

[[bin]]
name = "bootcamp-medium-88"
path = "src/bin/88.rs"

[[bin]]
name = "bootcamp-medium-89"
path = "src/bin/89.rs"

[[bin]]
name = "bootcamp-medium-90"
path = "src/bin/90.rs"

[[bin]]
name = "bootcamp-medium-91"
path = "src/bin/91.rs"

[[bin]]
name = "bootcamp-medium-92"
path = "src/bin/92.rs"

[[bin]]
name = "bootcamp-medium-93"
path = "src/bin/93.rs"

[[bin]]
name = "bootcamp-medium-94"
path = "src/bin/94.rs"

[[bin]]
name = "bootcamp-medium-95"
path = "src/bin/95.rs"

[[bin]]
name = "bootcamp-medium-96"
path = "src/bin/96.rs"

[[bin]]
name = "bootcamp-medium-97"
path = "src/bin/97.rs"

[[bin]]
name = "bootcamp-medium-98"
path = "src/bin/98.rs"

[[bin]]
name = "bootcamp-medium-99"
path = "src/bin/99.rs"

[[bin]]
name = "bootcamp-medium-100"
path = "src/bin/100.rs"


[dependencies]
num = "=0.2.1"
num-bigint = "=0.2.6"
num-complex = "=0.2.4"
num-integer = "=0.1.42"
num-iter = "=0.1.40"
num-rational = "=0.2.4"
num-traits = "=0.2.11"
num-derive = "=0.3.0"
ndarray = "=0.13.0"
nalgebra = "=0.20.0"
alga = "=0.9.3"
libm = "=0.2.1"
rand = { version = "=0.7.3", features = ["small_rng"] }
getrandom = "=0.1.14"
rand_chacha = "=0.2.2"
rand_core = "=0.5.1"
rand_hc = "=0.2.0"
rand_pcg = "=0.2.1"
rand_distr = "=0.2.2"
petgraph = "=0.5.0"
indexmap = "=1.3.2"
regex = "=1.3.6"
lazy_static = "=1.4.0"
ordered-float = "=1.0.2"
ascii = "=1.0.0"
permutohedron = "=0.2.4"
superslice = "=1.0.0"
itertools = "=0.9.0"
itertools-num = "=0.1.3"
maplit = "=1.0.2"
either = "=1.5.3"
im-rc = "=14.3.0"
fixedbitset = "=0.2.0"
bitset-fixed = "=0.1.0"
proconio = { version = "=0.3.6", features = ["derive"] }
text_io = "=0.1.8"
whiteread = "=0.5.0"
rustc-hash = "=1.1.0"
smallvec = "=1.2.0"

[dev-dependencies]
